# latte-dock-ng

./: CHANGELOG.md  CMakeLists.txt  INSTALLATION.md  README.md  flake.nix  install.sh  uninstall.sh
.github/workflows/: release.yml
app/: alternativeshelper.cpp  alternativeshelper.h  infoview.cpp  knscompat.cpp  knscompat.h  lattecorona.cpp  lattecorona.h  main.cpp  org.kde.latte-dock.appdata.xml.cmake  primaryoutputwatcher.cpp  primaryoutputwatcher.h  screenpool.cpp  screenpool.h
app/data/: generictable.cpp  generictable.h  viewdata.cpp
app/dbus/: org.kde.LatteDock.xml
app/declarativeimports/: contextmenulayerquickitem.cpp  contextmenulayerquickitem.h  interfaces.cpp
app/indicator/: factory.cpp
app/layout/: abstractlayout.cpp  centrallayout.cpp
app/layouts/: syncedlaunchers.cpp
app/plasma/extended/: backgroundcache.cpp  backgroundcache.h  backgroundtracker.cpp  panelbackground.cpp  screengeometries.cpp  screenpool.cpp  screenpool.h  theme.cpp
app/settings/actionsdialog/: actionshandler.cpp
app/settings/detailsdialog/: detailsdialog.cpp  detailshandler.cpp  schemescombobox.cpp
app/settings/generic/: generictools.cpp  generictools.h  genericviewtools.cpp  layoutscombobox.cpp
app/settings/settingsdialog/: layoutscontroller.cpp  layoutsmodel.cpp  settingsdialog.cpp  tablayoutshandler.cpp  tabpreferenceshandler.cpp
app/settings/settingsdialog/delegates/: activitiesdelegate.cpp
app/settings/viewsdialog/: viewscontroller.cpp  viewsdialog.cpp  viewshandler.cpp  viewsmodel.cpp
app/settings/viewsdialog/delegates/: custommenuitemwidget.cpp  custommenuitemwidget.h  namedelegate.cpp  singleoptiondelegate.cpp
app/shortcuts/: globalshortcuts.cpp  modifiertracker.cpp
app/view/: clonedview.cpp  containmentinterface.cpp  containmentinterface.h  effects.cpp  effects.h  originalview.cpp  parabolic.cpp  positioner.cpp  tasksmodel.cpp  view.cpp  view.h  visibilitymanager.cpp
app/view/indicator/: indicator.cpp  indicatorresources.cpp
app/view/settings/: indicatoruimanager.cpp  primaryconfigview.cpp  subconfigview.cpp  widgetexplorerview.cpp
app/view/windowstracker/: allscreenstracker.cpp  currentscreentracker.cpp  windowstracker.cpp
app/wm/: abstractwindowinterface.cpp  waylandinterface.cpp
app/wm/tracker/: lastactivewindow.cpp  schemes.cpp  trackedgeneralinfo.cpp  trackedlayoutinfo.cpp  trackedviewinfo.cpp  windowstracker.cpp
autotests/: CMakeLists.txt  containmentlayoutunittest.cpp  contextmenuunittest.cpp  corecomponentstest.cpp  indicatoruipathstub.cpp  knscompatunittest.cpp  launcherunittest.cpp  layoutunittest.cpp  packagingcontracttest.cpp  panelshadowunittest.cpp  panelthemeshadowstub.cpp  plasmaextendedunittest.cpp  pluginregistrationunittest.cpp  qmlsmoketest.cpp  schemecolorsunittest.cpp  shortcutunittest.cpp  sourcecontracttest.cpp  taskspluginunittest.cpp  toolsunittest.cpp  viewpartunittest.cpp
cmake/: CheckLayerShellSetScreen.cpp  LatteCompilerWarnings.cmake  LattePackaging.cmake
containment/package/contents/config/: main.xml
containment/package/contents/ui/: BindingsExternal.qml  DragDropArea.qml  main.qml
containment/package/contents/ui/abilities/: AutoSize.qml  MyView.qml  ParabolicEffect.qml
containment/package/contents/ui/abilities/privates/: LayouterPrivate.qml  MetricsPrivate.qml
containment/package/contents/ui/abilities/privates/metrics/: Fraction.qml
containment/package/contents/ui/applet/: AppletItem.qml  ItemWrapper.qml  PaddingsInConfigureApplets.qml  ParabolicArea.qml
containment/package/contents/ui/background/: MultiLayered.qml
containment/package/contents/ui/colorizer/: Manager.qml
containment/package/contents/ui/editmode/: ConfigOverlay.qml
containment/package/contents/ui/layouts/: AppletsContainer.qml  EnvironmentActions.qml  LayoutsContainer.qml
containment/plugin/: layoutmanager.cpp  layoutmanager.h
containmentactions/contextmenu/: layoutmenuitemwidget.cpp  layoutmenuitemwidget.h  menu.cpp  menu.h
declarativeimports/abilities/client/: Metrics.qml  MyView.qml
declarativeimports/abilities/client/indicators/: LatteIndicator.qml
declarativeimports/abilities/definition/: MyView.qml  qmldir
declarativeimports/abilities/definition/indicators/: IndicatorInfo.qml
declarativeimports/abilities/definition/metrics/: Constants.qml
declarativeimports/abilities/host/: Containment.qml  Metrics.qml
declarativeimports/abilities/items/: IndicatorObject.qml
declarativeimports/components/: Button.qml  ComboBoxButton.qml  SpinBox.qml  Switch.qml
declarativeimports/core/: environment.cpp  environment.h  iconitem.cpp
docker/: Dockerfile.arch  Dockerfile.debian  Dockerfile.fedora  Dockerfile.gentoo  Dockerfile.opensuse  Dockerfile.ubuntu  docker-compose.yml  package-arch.sh  verify-ebuild-gentoo.sh
docs/: development-testing-guide.md
docs/superpowers/plans/: 2026-05-17-advanced-config-cleanup-plan.md
docs/superpowers/specs/: 2026-05-17-advanced-config-cleanup-design.md  2026-05-17-transparent-edit-mode-design.md
indicators/: CMakeLists.txt
indicators/default/package/ui/: main.qml
plasmoid/package/contents/ui/: PulseAudio.qml  TasksExtendedManager.qml  main.qml
plasmoid/package/contents/ui/previews/: ToolTipDelegate2.qml
plasmoid/package/contents/ui/task/: TaskIcon.qml  TaskItem.qml  TaskMouseArea.qml
plasmoid/package/contents/ui/task/animations/: ClickedAnimation.qml
plasmoid/package/contents/ui/taskslayout/: MouseHandler.qml
separator/package/: metadata.json
separator/package/contents/ui/: main.qml
shell/package/contents/applet/: CompactApplet.qml
shell/package/contents/configuration/: CanvasConfiguration.qml  LatteDockConfiguration.qml
shell/package/contents/configuration/canvas/: SettingsOverlay.qml
shell/package/contents/configuration/pages/: BehaviorConfig.qml  EffectsConfig.qml  TasksConfig.qml
shell/package/contents/controls/: CustomIndicatorButton.qml  CustomVisibilityModeButton.qml
shell/package/contents/templates/: Default Dock.view.latte  Default.layout.latte
shell/package/contents/views/: AppletDelegate.qml  WidgetExplorer.qml
